tests/sksl/errors/golden/OpaqueTypeInArray.glsl
### Compilation failed:

error: 1: opaque type 'sampler' may not be used in an array
error: 2: opaque type 'sampler' may not be used in an array
error: 3: variables of type 'sampler' must be global
error: 3: opaque type 'sampler' may not be used in an array
error: 4: opaque type 'sampler' may not be used in an array
5 errors
